--- a/constants.gradle
+++ b/constants.gradle
@@ -2,3 +2,11 @@
 ext.kotlin_version = '1.4.21'
 ext.material_version = '1.2.1'
 ext.nav_version = '2.3.2'
+ext.lifecycle_version = '2.2.0'
+ext.arch_version = '2.1.0'
+ext.retrofit_version = '2.9.0'
+ext.rx_version = '3.0.0'
+ext.hilt_version = '2.28-alpha'
+ext.hilt_compiler_version = '1.0.0-alpha01'
+ext.okhttp_version = '4.9.0'
+//ext._version = ''
