--- a/constants.gradle
+++ b/constants.gradle
@@ -9,4 +9,5 @@ ext.rx_version = '3.0.0'
 ext.hilt_version = '2.28-alpha'
 ext.hilt_compiler_version = '1.0.0-alpha01'
 ext.okhttp_version = '4.9.0'
+ext.recyclerview_version = '1.1.0'
 //ext._version = ''
