--- a/constants.gradle
+++ b/constants.gradle
@@ -12,4 +12,5 @@ ext.okhttp_version = '4.9.0'
 ext.recyclerview_version = '1.1.0'
 ext.glide_version = '4.11.0'
 ext.room_version = '2.2.6'
+ext.fragment_version = '1.2.5'
 //ext._version = ''
