--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField("String", "BASE_URL", "\"https://5f7c2c8400bd74001690a583.mockapi.io/api/v1/\"")
+        }
+        debug {
+            buildConfigField("String", "BASE_URL", "\"https://5f7c2c8400bd74001690a583.mockapi.io/api/v1/\"")
         }
     }
     compileOptions {
