--- a/constants.gradle
+++ b/constants.gradle
@@ -11,6 +11,6 @@ ext.hilt_compiler_version = '1.0.0-alpha01'
 ext.okhttp_version = '4.9.0'
 ext.recyclerview_version = '1.1.0'
 ext.glide_version = '4.11.0'
-ext.room_version = '2.2.6'
+ext.room_version = '2.3.0-beta01'
 ext.fragment_version = '1.2.5'
 //ext._version = ''
